# Huffman-File-Archiver

./: CMakeLists.txt  README  README.md
include/: commandLineParser.h  fileBits.h  huffman.h  huffmanTree.h  huffmanTypes.h  rates.h
src/: commandLineParser.cpp  fileBits.cpp  huffman.cpp  huffmanTree.cpp  main.cpp  rates.cpp
test/: CMakeLists.txt  commandLineParser_test.cpp  fileBits_test.cpp  huffmanTree_test.cpp  huffmanTypes_test.cpp  huffman_test.cpp  rates_test.cpp  test_all_files  test_file
test/test_files/: FIBBONCCI  kkkk  русский
